--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
 		  z-index: 50;
 		}
 		
-		#compass {
+		
+		
+		#gpsStatus{
 		position:absolute;
-		top:20px;
-		left:20px;
 		z-index:51;
-		font-size:2em;
-		font-weight:bolder;}
+		}
 		
 	</style>
 	
